# CoHAN_Navigation

./: .gitmodules  README.md
cohan_navigation/: CMakeLists.txt  package.xml
cohan_navigation/config/config_smb/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  global_costmap_params.yaml  local_costmap_params.yaml  planner.yaml
cohan_navigation/config/gazebo_pr2_move_base_config/: amcl_node.xml  global_costmap_params.yaml  hateb_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
cohan_navigation/config/gazebo_tiago_move_base_config/: amcl_node.xml  global_costmap_params.yaml  hateb_local_planner_params.yaml  local_costmap_params.yaml
cohan_navigation/config/morse_pr2_move_base_config/: amcl_node.xml  global_costmap_params.yaml  global_costmap_params_human.yaml  hateb_local_planner_params.yaml  local_costmap_params.yaml  local_costmap_params_human.yaml
cohan_navigation/config/pr2_move_base_config/: amcl_node.xml  base_local_planner_params.yaml  global_costmap_params.yaml  global_costmap_params_close_indoors.yaml  hateb_local_planner_params.yaml  hateb_local_planner_params_close_indoors.yaml  local_costmap_params.yaml  local_costmap_params_close_indoors.yaml  move_base_params.yaml  move_base_params_close_indoors.yaml
cohan_navigation/config/stage_pr2_move_base_config/: amcl_node.xml  global_costmap_params.yaml  hateb_local_planner_params.yaml  hateb_local_planner_params_nh.yaml  (+5 more)
cohan_navigation/maps/: adream_RDC_complet.pgm  adream_RDC_complet.pgm~  adream_RDC_complet.yaml  apartment.pgm  apartment.yaml  bremen_kitchen.yaml  hospital.yaml  hospital_map_basic.pgm  hospital_map_with_beds.pgm  junctions.yaml  laas_adream.pgm  laas_adream_no_tables.pgm  laas_adream_no_tables.yaml  laas_adream_stage.pgm  laas_adream_stage.yaml  mall.yaml  mall2.pgm  mall2.xcf  map_laas_adream.pgm  map_laas_adream.yaml  map_laas_adream_narrrow.pgm  map_laas_adream_original.pgm  simple_junction.pgm  simple_junction.yaml  simple_junction_1.pgm
cohan_navigation/pr2_launch/: pr2_full.launch  pr2_nav.launch  pr2_nav_close_indoors.launch  pr2_nav_smb.launch
cohan_navigation/rviz/: cohan_nav_agents.rviz  cohan_nav_morse.rviz  cohan_nav_morse_human_robot.rviz  cohan_nav_stage.rviz  cohan_nav_stage_human.rviz  cohan_nav_unreal.rviz
cohan_navigation/scripts/: agents_bridge.py  graph_pose_identification.py  optitrack_humans.py  person_following.py  teleop_humans_joy.py
cohan_navigation/tiago_multi_launch/: webots_human_agent.launch  webots_tiago_with_human_agent.launch
simulators/morse_ros/: package.xml
(+307 files in other folders)
