<?xml version="1.0"?>
<package>
  <name>cohan_navigation</name>
  <version>0.0.1</version>
  <description>configuration and launch files for cohan_navigation</description>

  <maintainer email="ptsingaman@laas.fr">Phani Teja Singamaneni</maintainer>

  <author email="ptsingaman@laas.fr">Phani Teja Singamaneni</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
